--- a/index.html
+++ b/index.html
@@ -65,10 +65,49 @@
             <li class="social-media__item"><a class="social-media__btn x" href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
             <li class="social-media__item"><a class="social-media__btn x" href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
             <li class="social-media__item"><a class="social-media__btn x" href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
-            <li class="social-media__item"><a class="social-media__btn x" href="#"><i class="fa-brands fa-youtube-square"></i></a></li>
+            <li class="social-media__item"><a class="social-media__btn x" href="https://www.youtube.com/watch?v=6mtnVtbCYDs&list=PLkrzfEDjeYJn5B22H9HOWP3Kxxs-DkPSM&index=14"><i class="fa-brands fa-youtube-square"></i></a></li>
         </ul>
         <!-- end of social media icons-->
     </aside>
+
+    <secion class="foods">
+            <!-- menu title -->
+            <div class="menu-title">
+                <h2>our menu</h2>
+                <div class="underline"></div>
+            </div>
+            <!-- end of menu title -->
+            <!-- menu's -->
+            <section class="menu-container">
+                <!-- single item -->
+                <!-- <article class="menu">
+                    <img src="./images/item-1.jpeg" class="menu__photo" alt="menu item">
+                    <div class="menu__info">
+                        <header>
+                            <h4>HotDog</h4>
+                            <h4 class="price">&#8369;20</h4>
+                        </header>
+                        <div class="menu__desc">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum tempore quia blanditiis quidem labore soluta sit exercitationem quibusdam consectetur odit?</p>
+                        </div>
+                        <div class="purchase">
+                            <div class="purchase__quantity">
+                                <button type="button" class="add-quantity">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button>
+                                <span class="item-quantity">10</span>
+                                <button type="button" class="minus-quantity">
+                                    <i class="fa-solid fa-minus"></i>
+                                </button>
+                            </div>
+                            <button class="purchase-btn">purchase</button>
+                        </div>
+                    </div>
+                </article> -->
+                <!-- end of single item -->
+            </section>
+
+    </secion>
 
     <script src="script.js"></script>
 </body>
