--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 <body>
     
-    <header class="header-title">
-        <div class="header-center">
+    <header class="header-brand">
+        <div class="header-brand__center">
             <!-- title -->
-            <div class="title-container">
-                <a href="#"><h1 class="title">Mc<span>Dog</span></h1></a>
+            <div class="brand-container">
+                <a href="#"><h1 class="brand">Mc<span>Dog</span></h1></a>
                 <button class="nav-toggle" type="button">
                     <span class="close-bars"><i class="fa-solid fa-bars"></i></span>
                     <span class="open-bars"><i class="fa-solid fa-bars-staggered"></i></span>
@@ -69,45 +69,29 @@
         </ul>
         <!-- end of social media icons-->
     </aside>
-
-    <secion class="foods">
+    <section class="menus">
             <!-- menu title -->
             <div class="menu-title">
                 <h2>our menu</h2>
                 <div class="underline"></div>
             </div>
             <!-- end of menu title -->
+            <!-- btn container -->
+            <div class="btn-container">
+            </div>
+            <!-- end of btn container -->
             <!-- menu's -->
             <section class="menu-container">
-                <!-- single item -->
-                <!-- <article class="menu">
-                    <img src="./images/item-1.jpeg" class="menu__photo" alt="menu item">
-                    <div class="menu__info">
-                        <header>
-                            <h4>HotDog</h4>
-                            <h4 class="price">&#8369;20</h4>
-                        </header>
-                        <div class="menu__desc">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum tempore quia blanditiis quidem labore soluta sit exercitationem quibusdam consectetur odit?</p>
-                        </div>
-                        <div class="purchase">
-                            <div class="purchase__quantity">
-                                <button type="button" class="add-quantity">
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
-                                <span class="item-quantity">10</span>
-                                <button type="button" class="minus-quantity">
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
-                            </div>
-                            <button class="purchase-btn">purchase</button>
-                        </div>
-                    </div>
-                </article> -->
-                <!-- end of single item -->
             </section>
 
-    </secion>
+    </section>
+
+    <footer>
+        <div class="footer-container">
+            <p>Developed and Design by: <a href="https://www.facebook.com/Tuason06/" class="developer">jeffrey d. tuason</a></p>
+            <p>&copy; <span class="copyright"></span> All Rights Reserved </p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
