--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
     <link rel="stylesheet" href="style.css">    
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/8cf5703070.js" crossorigin="anonymous"></script>
+    <!-- lord icon -->
     <!-- font families -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@400;700&family=Caveat:wght@400;700&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Athiti:wght@400;700&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- preloader -->
+    <div class="preloader">
+        <script src="https://cdn.lordicon.com/lusqsztk.js"></script>
+        <lord-icon
+            src="https://cdn.lordicon.com/fgxmcqrv.json"
+            trigger="loop"
+            colors="primary:#0b4619,secondary:#ffcc1d"
+            style="width:250px;height:250px">
+        </lord-icon>
+    </div>
+    <!-- modal -->
+    <div class="modal">
+        <button type="button" class="modal-btn">
+            <i class="fa-solid fa-xmark"></i>
+        </button>
+        <h1>Thank you for purchasing</h1>
+    </div>
     <header class="header-brand">
         <div class="header-brand__center">
             <!-- title -->
